# Lab_GC

./: 01_the_machine_learning_landscape.ipynb  DS_Analisis_Fecha_Y_Horas.ipynb  MLOps.ipynb  ML_Automatización_flujo_de_trabajos_para_aprendizaje_automáticos.ipynb  ML_Clustering_DBSCAN.ipynb  ML_Construir_Servidores_MCP.ipynb  ML_Estrategias_avanzadas_de_ajuste_de_hiperparámetros_para_modelos_de_Scikit_learn.ipynb  ML_Statistics_to_Machine_Learning_Hypothesis_testing.ipynb  README.md  ml_classifcaction_gaussianmixture.ipynb
DS-Fastfood_Sales_Forecast/: Dockerfile  Makefile  Makefile.win  README.md  TEMPLATE_GUIDE.md  app.py  cookiecutter.json  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.ps1  setup.py
DS-Fastfood_Sales_Forecast/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
DS-Fastfood_Sales_Forecast/catboost_info/learn/: events.out.tfevents
DS-Fastfood_Sales_Forecast/config/: config.yaml
DS-Fastfood_Sales_Forecast/data/processed/: daily_sales.csv  features.csv  model_metrics.csv  predictions.csv
DS-Fastfood_Sales_Forecast/docs/: conf.py  index.rst
DS-Fastfood_Sales_Forecast/fastfood_sales_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DS-Fastfood_Sales_Forecast/models/: best_model_Ridge_Regression.pkl  xgboost_forecaster.pkl
DS-Fastfood_Sales_Forecast/notebooks/: eda_analysis.py
DS-Fastfood_Sales_Forecast/src/: etl.py  features.py  logger.py  train.py
DS-Fastfood_Sales_Forecast/tests/: test_etl.py  test_features.py  test_train.py
etl_nba_portafolio/: .env.example  .gitignore  README.md  (+1 more)
(+12 files in other folders)
